# atcha

./: .beans.yml  .gitignore  CLAUDE.md  README.md  pyproject.toml
.beans/: atcha-3iuq--fix-user-creation-to-properly-handle-id-vs-name.md  atcha-7hzb--add-random-immutable-id-field.md  atcha-9fhm--fix-outdated-command-documentation-in-claudemd-rea.md  atcha-e0h9--simplify-user-id-to-just-be-the-name-no-role-slug.md  atcha-esj4--remove-agents-command-keep-only-contacts-and-admin.md  atcha-l4yx--update-outdated-readmemd-and-claudemd.md  atcha-pdia--refactor-messages-interface.md  atcha-uxq3--make-role-updates-admin-only.md  atcha-zrk0--standardize-terminology-from-agents-to-users.md  team-mail-07uz--create-unified-team-mail-skillmd.md  team-mail-0yqy--implement-new-send-command-semantics.md  team-mail-4113--implement-messages-command.md  team-mail-4i01--implement-contacts-command.md  team-mail-50nc--inbox-read-verify-filters-and-exclude-to-field.md  team-mail-88qz--cli-interface-polish.md  team-mail-92gi--refactor-team-mail-to-atcha.md  team-mail-b6lc--move-init-and-create-token-to-top-level-commands.md  team-mail-c8cm--users-list-exclude-self-by-default.md  team-mail-hmug--implement-threading-support.md  team-mail-j7zd--remove-commands-directory.md  team-mail-kahw--remove-redundant-init-workspace-skill.md  team-mail-kvod--add-whoami-command-alias.md  team-mail-ld6x--update-admin-commands.md  team-mail-lkq4--update-test-suite.md  team-mail-nujy--users-add-use-name-and-role-options.md  team-mail-qd58--get-team-mail-cli-into-functional-state.md  (+4 more)
.claude/: settings.json
(+70 files in other folders)
