[project]
name = "atcha"
version = "0.1.0"
description = "File-based chat for parallel coding agents"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
atcha = "atcha.cli.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]
